# xlcalculator

./: .gitignore  bases_test_excel.xlsx  pyproject.toml
tests/: conftest.py  property_based_testing.py  testing.py  xlwings_fixtures.py
tests/property_testing/: bases_test.py  test_engineering.py
tests/resources/: BASES.xlsx
tests/xlfunctions/: case.py  test_engineering.py  test_math.py
tests/xlfunctions_vs_excel/: bases_test.py  test_dec2bin.xlsx
xlcalculator/xlfunctions/: engineering.py  func_xltypes.py  math.py
