[tool.poetry]
name = "xlcalculator"
version = "0.1.0"
description = ""
authors = ["Cameron Pinnegar <cameron.pinnegar@education.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.7.1"
jsonpickle = "^1.4.2"
numpy = "^1.19.4"
pandas = "^1.0.0"
openpyxl = "^3.0.5"
numpy-financial = "^1.0.0"
yearfrac = "0.4.4"
mock = "^4.0.3"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pip-tools = "^5.5.0"
pytest = "^4.0.0"
pytest-cov = "^2.10.1"
xlwings = "^0.21.4"
hypothesis = "^5.43.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
